5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1590_2895.log
== TEST (2019-03-20 15:37:36) 
-- CODE:
var = input ("quantidade de jogos a serem encomendados? ")
var = input ("qual valor unitário de cada jogo?" )
var = input ("qual o valor do frete? ")
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:37:39) 
-- CODE:
var = input ("quantidade de jogos a serem encomendados? ")
var = input ("qual valor unitário de cada jogo?" )
var = input ("qual o valor do frete? ")
print(total)
-- EXECUTION TIME:
0.199266
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:41:50) 
-- CODE:
var = input (5)
var = input (100.0)
var = input (40.0)
print(540)
-- OUTPUT:
5100.040.0540
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:41:52) 
-- CODE:
var = input (5)
var = input (100.0)
var = input (40.0)
print(540)
-- EXECUTION TIME:
0.208161
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
5100.040.0540
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
5100.040.0540
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
5100.040.0540
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 15:46:58) 
-- CODE:
var = input ("Quantos jogos serao encomendados? ")
var = input ("Qual o valor unitario do jogo? ")
var = input ("Qual o valor do frete? ")
total =(quantos * valor) + valor
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total =(quantos * valor) + valor
NameError: name 'quantos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:46:59) 
-- CODE:
var = input ("Quantos jogos serao encomendados? ")
var = input ("Qual o valor unitario do jogo? ")
var = input ("Qual o valor do frete? ")
total =(quantos * valor) + valor
print(total)
-- EXECUTION TIME:
0.1501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total =(quantos * valor) + valor
NameError: name 'quantos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:47:00) 
-- CODE:
var = input ("Quantos jogos serao encomendados? ")
var = input ("Qual o valor unitario do jogo? ")
var = input ("Qual o valor do frete? ")
total =(quantos * valor) + valor
print(total)
-- EXECUTION TIME:
0.183133
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total =(quantos * valor) + valor
NameError: name 'quantos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 15:47:01) 
-- CODE:
var = input ("Quantos jogos serao encomendados? ")
var = input ("Qual o valor unitario do jogo? ")
var = input ("Qual o valor do frete? ")
total =(quantos * valor) + valor
print(total)
-- EXECUTION TIME:
0.182361
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total =(quantos * valor) + valor
NameError: name 'quantos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:12:02) 
-- CODE:
var = float(int(input("Quantidade de jogos? ")
var = float(int(input("Qual o valor unitario do jogo? ")
var = float(int(input("Qual o valor do frete? ")
total =(quantidade de jogos * valor unitario) + valor frete
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:15:09) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Qual o valor unitario do jogo?")
var = float(int(input("Qual o valor do frete?")
total =(quantidade de jogos * valor unitario) + valor frete
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:15:48) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Valor unitario do jogo?")
var = float(int(input("Valor do frete?")
total =(quantidade de jogos * valor unitario) + valor frete
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:15:52) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Valor unitario do jogo?")
var = float(int(input("Valor do frete?")
total =(quantidade de jogos * valor unitario) + valor frete
print(total)
-- EXECUTION TIME:
0.277328
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:16:26) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Valor unitario do jogo?")
var = float(int(input("Valor do frete?")
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:16:28) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Valor unitario do jogo?")
var = float(int(input("Valor do frete?")
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:16:31) 
-- CODE:
var = float(int(input("Quantidade de jogos?")
var = float(int(input("Valor unitario do jogo?")
var = float(int(input("Valor do frete?")
print(total)
-- EXECUTION TIME:
0.132278
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var = float(int(input()
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:17:00) 
-- CODE:
var = float(input("Quantidade de jogos?")
var = float(input("Valor unitario do jogo?")
var = float(input("Valor do frete?")
print(total)
-- ERROR:
File "XXXX", line 2
    var = float(input()
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:17:05) 
-- CODE:
var = float(input("Quantidade de jogos?")
var = float(input("Valor unitario do jogo?")
var = float(input("Valor do frete?")
print(total)
-- EXECUTION TIME:
0.189028
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    var = float(input()
      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:17:55) 
-- CODE:
valor = float(input("Quantidade de jogos?")
valor = float(input("Valor unitario do jogo?")
valor = float(input("Valor do frete?")
print(total)
-- ERROR:
File "XXXX", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:17:58) 
-- CODE:
valor = float(input("Quantidade de jogos?")
valor = float(input("Valor unitario do jogo?")
valor = float(input("Valor do frete?")
print(total)
-- EXECUTION TIME:
0.1832
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:32:41) 
-- CODE:
valor = float(input("Quantidade de jogos?")
valor = float(input("Valor unitario do jogo?")
valor = float(input("Valor do frete?")
total = (quantidade * valor unitario) + valor do frete
print(total)
-- ERROR:
File "XXXX", line 2
    valor = float(input()
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:34:50) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade * valor unitario) + valor do frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = (quantidade * valor unitario) + valor do frete
                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:34:55) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade * valor unitario) + valor do frete
print(total)
-- EXECUTION TIME:
0.138728
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    total = (quantidade * valor unitario) + valor do frete
                                       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:36:00) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:36:08) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(total)
-- EXECUTION TIME:
0.126106
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    print(total)
NameError: name 'total' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:36:23) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(total)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:38:28) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(quantidade de jogos * valor unitario + valor do frete)
-- ERROR:
File "XXXX", line 4
    print(quantidade de jogos * valor unitario + valor do frete)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:38:36) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(quantidade de jogos * valor unitario + valor do frete)
-- EXECUTION TIME:
0.137299
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    print(quantidade de jogos * valor unitario + valor do frete)
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:41:08) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(quantidade * valor unitario) + frete
print(quantidade * valor unitario) + frete
print(quantidade * valor unitario) + frete
-- ERROR:
File "XXXX", line 4
    print(quantidade * valor unitario) + frete
                                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:41:14) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
print(quantidade * valor unitario) + frete
print(quantidade * valor unitario) + frete
print(quantidade * valor unitario) + frete
-- EXECUTION TIME:
0.251523
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    print(quantidade * valor unitario) + frete
                                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:46:17) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = quantidade de jogos * valor unitario + 3 * valor do frete
-- ERROR:
File "XXXX", line 4
    total = quantidade de jogos * valor unitario + 3 * valor do frete
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:46:27) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = quantidade de jogos * valor unitario + 3 * valor do frete
-- EXECUTION TIME:
0.168714
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    total = quantidade de jogos * valor unitario + 3 * valor do frete
                        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:46:51) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos * valor unitario) + 3 * valor do frete
-- ERROR:
File "XXXX", line 4
    total = (quantidade de jogos * valor unitario) + 3 * valor do frete
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:47:15) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos + valor unitario) * valor do frete
-- ERROR:
File "XXXX", line 4
    total = (quantidade de jogos + valor unitario) * valor do frete
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:47:19) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos + valor unitario) * valor do frete
-- EXECUTION TIME:
0.140122
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    total = (quantidade de jogos + valor unitario) * valor do frete
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:48:12) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos * valor unitario) * valor do frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = (quantidade de jogos * valor unitario) * valor do frete
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:48:50) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos * valor unitario) + valor do frete
print(total)
-- ERROR:
File "XXXX", line 4
    total = (quantidade de jogos * valor unitario) + valor do frete
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:49:19) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
preco pago = (quantidade de jogos * valor unitario) + valor do frete
print(preco pago)
-- ERROR:
File "XXXX", line 4
    preco pago = (quantidade de jogos * valor unitario) + valor do frete
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:50:54) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (Quantidade de jogos? * valor unitario do jogo?) + valor do frete?
print(total)
-- ERROR:
File "XXXX", line 4
    total = (Quantidade de jogos? * valor unitario do jogo?) + valor do frete?
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:51:07) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (Quantidade de jogos? * valor unitario do jogo?) + valor do frete?
print(total)
-- EXECUTION TIME:
0.181239
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 4
    total = (Quantidade de jogos? * valor unitario do jogo?) + valor do frete?
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:53:22) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade * valor) + valor
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total = (quantidade * valor) + valor
NameError: name 'quantidade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:54:25) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
total = (quantidade de jogos * valor) + valor
print(total)
-- ERROR:
File "XXXX", line 4
    total = (quantidade de jogos * valor) + valor
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 18:01:35) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
preco = (quantidade de jogos * valor unitario do jogo) + valor do frete
print(preco)
-- ERROR:
File "XXXX", line 4
    preco = (quantidade de jogos * valor unitario do jogo) + valor do frete
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:23:49) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
preco = input(quantidade de jogos * valor unitario do jogo) + valor do frete
print(preco)
-- ERROR:
File "XXXX", line 4
    preco = input(quantidade de jogos * valor unitario do jogo) + valor do frete
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:24:09) 
-- CODE:
valor = float(input("Quantidade de jogos?"))
valor = float(input("Valor unitario do jogo?"))
valor = float(input("Valor do frete?"))
preco = input(quantidade de jogos * valor unitario do jogo + valor do frete)
print(preco)
-- ERROR:
File "XXXX", line 4
    preco = input(quantidade de jogos * valor unitario do jogo + valor do frete)
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:29:25) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
preco = input(var1 * var2) + var3
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco = input(var1 * var2) + var3
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:33:45) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
preco = input(var1 * var2) + var3
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preco = input(var1 * var2) + var3
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:34:28) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
print(preco)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(preco)
NameError: name 'preco' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:35:28) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
print(var1 * var2 + var3)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 14:35:28) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
print(var1 * var2 + var3)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 14:35:30) 
-- CODE:
var1 = float(input("Quantidade de jogos?"))
var2 = float(input("Valor unitario do jogo?"))
var3 = float(input("Valor do frete?"))
print(var1 * var2 + var3)
-- EXECUTION TIME:
0.160887
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
